[core-service] fix: Вырезал хранение контента шаблона в бд
